--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=9090
+
+server.servlet.session.cookie.name=wp_lab
+server.servlet.session.timeout=60m
+
+spring.mvc.hiddenmethod.filter.enabled=true
